k8s/05-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omeka
  namespace: omeka
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
spec:
  ingressClassName: nginx
  rules:
    - host: omeka.msm-cloud.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omeka
                port:
                  number: 80
